fix: revert spacing

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -94,8 +94,8 @@
 	--kangaroo-tags-hover-color:var(--simple-cta-color-hover);
 	--kangaroo-negative-element-color: #FFF;
 	//section editorial
-	--section-editorial-y-padding: 80px;
-	--section-editorial-y-padding-desk: 80px;
+	--section-editorial-y-padding: 96px;
+	--section-editorial-y-padding-desk: 96px;
 	--section-editorial-intro-text-size: 1.25rem;
 
 	//-search-main
